fix from stack overflow for test failure due to updating state after component unmounted

--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -15,7 +15,7 @@ li {
 
 a {
   text-decoration: none;  
-  color: whitesmoke0;
+  color: whitesmoke;
 }
 a:hover {
   font-weight: bold;
